--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pit",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,6 @@
   },
   "devDependencies": {
     "prisma": "^5.15.0"
-  }
+  },
+  "description": ""
 }
