--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "swagger": "node ./src/config/swaggerConfig.cjs"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "prisma": "^5.15.0"
+    "prisma": "^5.15.0",
+    "swagger-autogen": "^2.23.7"
   },
   "description": ""
 }
